--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     </section>
 
     <section class="main__filter filter container">
-      <input type="radio" id="filter__all" class="filter__input visually-hidden" name="filter" checked />
+      <!-- <input type="radio" id="filter__all" class="filter__input visually-hidden" name="filter" checked />
       <label for="filter__all" class="filter__label">
         ALL <span class="filter__all-count">15</span></label>
       <input type="radio" id="filter__overdue" class="filter__input visually-hidden" name="filter" disabled />
@@ -56,7 +56,7 @@
       <input type="radio" id="filter__tags" class="filter__input visually-hidden" name="filter" />
       <label for="filter__tags" class="filter__label">Tags <span class="filter__tags-count">6</span></label>
       <input type="radio" id="filter__archive" class="filter__input visually-hidden" name="filter" />
-      <label for="filter__archive" class="filter__label">ARCHIVE <span class="filter__archive-count">115</span></label>
+      <label for="filter__archive" class="filter__label">ARCHIVE <span class="filter__archive-count">115</span></label> -->
     </section>
 
     <section class="statistic container visually-hidden">
@@ -107,7 +107,7 @@
       </p>
 
       <div class="board__tasks">
-        <article class="card card--edit card--black">
+        <!-- <article class="card card--edit card--black">
           <form class="card__form" method="get">
             <div class="card__inner">
               <div class="card__control">
@@ -967,7 +967,7 @@ Here is a card with filled data</textarea>
               </div>
             </div>
           </form>
-        </article>
+        </article> -->
       </div>
 
       <button class="load-more" type="button">load more</button>
